objects/zkusps__PrintHistory__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__PrintJobId__c</fullName>
        <label>Print Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__PrinterId__c</fullName>
        <label>Printer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__PrinterName__c</fullName>
        <label>Printer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Shipment__c</fullName>
        <label>USPS Shipment</label>
        <referenceTo>zkusps__Shipment__c</referenceTo>
        <relationshipLabel>USPS Print History</relationshipLabel>
        <relationshipName>USPS_Print_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>USPS Print History</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>USPS Print History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Print History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>